[project]
name = "cumulus-genomic-pipeline"
version = "0.1.0"
description = "Cumulus pipeline for genomic data"
authors = [
    {name = "lucas.sikina@childrens.harvard.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cyvcf2 (>=0.31.1,<0.32.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

